@@ -19,6 +19,8 @@ Release 0.91.0 - Unreleased
                Wrong (Ed Kohlwey via Stack)
    HBASE-1888  KeyValue methods throw NullPointerException instead of
                IllegalArgumentException during parameter sanity check
+   HBASE-3337  Restore HBCK fix of unassignment and dupe assignment for new
+               master
 
   IMPROVEMENTS
    HBASE-2001  Coprocessors: Colocate user code with regions (Mingjie Lai via
